--- a/project_johnvarvatos/index.html
+++ b/project_johnvarvatos/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>John Varvatos | Portfolio</title>
-    <link rel="stylesheet" href="/styles/reset.css" />
+    <link rel="stylesheet" href="./styles/reset.css" />
     <!--플러그인 필수 css cdn 연결-->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
@@ -43,7 +43,8 @@
             <div class="swiper" id="main_banner">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide" id="banner_swiper">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/bay-vT_FQk0?mute=1&autoplay=1&loop=1&controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe width="1920" height="1080" src="https://www.youtube.com/embed/bay-vT_FQk0?autoplay=1&mute=1&controls=0&loop=0" title="John Varvatos Pre-Fall 2022 Campaign Featuring JJ Kaleo" frameborder="0" allow="accelerometer; autoplay=1; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <div class="block"></div>
                     </div>
                     <div class="swiper-slide"></div>
                     <div class="swiper-slide"></div>
@@ -75,10 +76,10 @@
             <h3>장인 정신에 럭셔리함을 더해주는 수공예 등나무(라탄) 보틀 편안함을 더해주는 데일리 향취</h3>
             <div class="swiper" id="product_swiper">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide"><h2>아티산 EDT</h2><p>아티산만의 상쾌한 시트러스 향으로 젊음과 깨끗함을 전달합니다.</p></div>
-                    <div class="swiper-slide"><h2>아티산 블랙 EDT</h2><p>남성적인 터치가  더해져 섬세하면서도 강렬한 분위기를 선사합니다.</p></div>
-                    <div class="swiper-slide"><h2>아티산 블루 EDT</h2><p>따스한 햇살아래 푸른 바다의 풍요롭고 낭만적인 향기를 전달합니다.</p></div>
-                    <div class="swiper-slide"><h2>아티산 퓨어 EDT</h2><p>순수한 시트러스 향에 햇볕에 쬐인 나무의 절제된 우아함으로 포근하게 마무리됩니다.</p></div>
+                    <div class="swiper-slide s1"><h2>아티산 EDT</h2><p>아티산만의 상쾌한 시트러스 향으로 젊음과 깨끗함을 전달합니다.</p></div>
+                    <div class="swiper-slide s2"><h2>아티산 블랙 EDT</h2><p>남성적인 터치가  더해져 섬세하면서도 강렬한 분위기를 선사합니다.</p></div>
+                    <div class="swiper-slide s3"><h2>아티산 블루 EDT</h2><p>따스한 햇살아래 푸른 바다의 풍요롭고 낭만적인 향기를 전달합니다.</p></div>
+                    <div class="swiper-slide s4"><h2>아티산 퓨어 EDT</h2><p>순수한 시트러스 향에 햇볕에 쬐인 나무의 절제된 우아함으로 포근하게 마무리됩니다.</p></div>
                 </div>
             </div>
         </section>
